[package]
name = "process_pool"
version = "0.1.0"
edition = "2021"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = ['Win32_Foundation', 'Win32_System', 'Win32_System_JobObjects', 'Win32_Security', 'Win32_System_Threading', 'Win32_System_Pipes', 'Win32_Storage_FileSystem'] }
anyhow = "1.0.95"